--- a/Flutter/LikeInstaApp/pubspec.yaml
+++ b/Flutter/LikeInstaApp/pubspec.yaml
@@ -25,11 +25,13 @@ dependencies:
     sdk: flutter
   cupertino_icons: ^0.1.3
   english_words: ^3.1.0
+  http: ^0.12.1
 
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
